--- a/package.json
+++ b/package.json
@@ -1,12 +1,31 @@
 {
   "name": "projeto-mvc",
   "dependencies": {
+    "type": "module",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.14.1"
-  }
+    "mysql2": "^3.15.3"
+  },
+  "version": "1.0.0",
+  "description": "## 📁 Estrutura Geral do Projeto ``` /config           → Arquivos de configuração (ex: conexão com MySQL) /models           → Modelos (comandos SQL que interagem com o banco) /controllers      → Lógica de controle entre Model e View /routes           → Define as rotas da aplicação /public   ├── /pages       → Arquivos HTML visíveis no navegador   ├── /css         → Arquivos de estilo (CSS)   └── /js          → Scripts (JavaScript) app.js            → Arquivo principal do servidor /db_tarefas.sql   → Script SQL para criar o banco de dados ```",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Jonas293599/ProjetoFinalRealOficial.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Jonas293599/ProjetoFinalRealOficial/issues"
+  },
+  "homepage": "https://github.com/Jonas293599/ProjetoFinalRealOficial#readme"
 }
